--- a/.github/workflows/action2.yml
+++ b/.github/workflows/action2.yml
@@ -2,7 +2,7 @@ name: second-github-action
 on: [push]
 jobs:
   write-to-console:
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
    - name: Checkout
       uses: actions/checkout@v2.4.0
 
