--- a/.github/workflows/action5.yml
+++ b/.github/workflows/action5.yml
@@ -1,7 +1,8 @@
 name: fifth-github-action
 on: [push]
 jobs:
-  steps:
-    # runs-on: ubuntu-latest
-   - name: Checkout
-      uses: actions/checkout@v2.4.0
+  write-to-console:
+    steps:
+      # runs-on: ubuntu-latest
+    - name: Checkout
+        uses: actions/checkout@v2.4.0
