--- a/.github/workflows/action6.yml
+++ b/.github/workflows/action6.yml
@@ -7,4 +7,5 @@ jobs:
       # runs-on: ubuntu-latest
     - name: Setup Node.js environment
       uses: actions/setup-node@v2.4.1
-
+    - name: Say Hello
+      run: echo 'I am tired!!! 😩'
